--- a/main.ipynb
+++ b/main.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 3 - What movie to watch tonight?"
+    "# What movie to watch tonight?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Goal of this homework is to build a search engine over a list of movies that have a dedicated page on Wikipedia. In order to achieve this goal, our work has been divided into different tasks that allowed us to fulfill the intent. Since we based the entire process upon using custom functions (choice due to the will of lightening the code and make it more readable), you won't find much commands, and we suggest to check the py files stored in this repository to better understand every step of which the notebook consists.\n",
+    "The goal of this project is to build a search engine over a list of movies that have a dedicated page on Wikipedia. In order to achieve this goal, our work has been divided into different tasks that allowed us to fulfill the intent. Since we based the entire process upon using custom functions (choice due to the will of lightening the code and make it more readable), you won't find much commands, and we suggest to check the py files stored in this repository to better understand every step of which the notebook consists.\n",
     "Let's start."
    ]
   },
@@ -1252,180 +1252,6 @@
     "query = 'Brad Pitt'\n",
     "se.query(search_engine = 3, q = query, dataframe = movies_df)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Algorithmic question"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to solve this problem we made multiple attempts, below we report all of them and explain the reasons behind every approach. Our first endeavour is actually very naive and to carry it out we decided to exploit itertools library. Our idea was: starting from the full sequence, if we set up a loop that decreases by one at each iteration,  we can compute all the combinations without replacement, and check if the resulting ones are equal to their reverse. If at least one of them satisfies this condition, the loop stops and we print the length of that which will be the longest palindromic sequence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First algorithm implementation. Please insert a string: dataminingsapienza2019902\n",
-      "It would take too much time.\n",
-      "There is no palindromic sequence or the elapsed time was igher than 10 seconds.\n",
-      "The algorithm took approximately 10.85 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from itertools import combinations\n",
-    "\n",
-    "sequence = input('First algorithm implementation. Please insert a string: ')\n",
-    "\n",
-    "start_time = time.time()\n",
-    "\n",
-    "count = set()\n",
-    "done = False\n",
-    "for i in range(len(sequence), 1, -1):\n",
-    "    if (time.time() - start_time) > 10:\n",
-    "        break\n",
-    "    subsequences = list(combinations(sequence, i))\n",
-    "    for k in range(len(subsequences)):\n",
-    "        if subsequences[k] == subsequences[k][::-1]:\n",
-    "            count.add(len(subsequences[k]))\n",
-    "            done = True\n",
-    "            break\n",
-    "    if done: break\n",
-    "\n",
-    "try:\n",
-    "    print('The longest palindromic subsequence has length: ' + str(max(count)))\n",
-    "except ValueError:\n",
-    "    print('There is no palindromic sequence or the elapsed time was higher than 10 seconds.')\n",
-    "    \n",
-    "\n",
-    "elapsed_time = time.time() - start_time\n",
-    "\n",
-    "print('The algorithm took approximately ' + str(round(elapsed_time, 2)) + ' seconds.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The previous algorithm works, but it's obviously not optimal, because the time taken to run it increases as the sequence length gets longer. Hence we tried to propose an alternative based upon recursion."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Second algorithm implementation. Please insert a string: dataminingsapienza20199098\n",
-      "The longest palindromic subsequence has length:  7\n",
-      "The algorithm took approximately 17.03 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "def palindrome(sequence, i, j): \n",
-    "    if (i == j): \n",
-    "        return 1\n",
-    "    if (sequence[i] == sequence[j] and i + 1 == j): \n",
-    "        return 2\n",
-    "    if (sequence[i] == sequence[j]): \n",
-    "        return palindrome(sequence, i + 1, j - 1) + 2\n",
-    "    return max(palindrome(sequence, i, j - 1), palindrome(sequence, i + 1, j)) \n",
-    "\n",
-    "sequence = input('Second algorithm implementation. Please insert a string: ')\n",
-    "   \n",
-    "start_time = time.time()\n",
-    "\n",
-    "length = len(sequence) \n",
-    "\n",
-    "if int(length) < 27:\n",
-    "    print(\"The longest palindromic subsequence has length: \", palindrome(sequence, 0, length - 1)) \n",
-    "else:\n",
-    "    print('It would take too much time.')\n",
-    "\n",
-    "elapsed_time = time.time() - start_time\n",
-    "\n",
-    "print('The algorithm took approximately ' + str(round(elapsed_time, 2)) + ' seconds.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Even in this case, although an improvement in terms of space is obtained (and that is not trivial), the running time continues to be very long. Our last try is based upon Dynamic Programming, and we wrote the code by studying the algorithm derived from this approach. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dataminingsapienzadataminingsapienza\n",
-      "The longest palindromic subsequence has length: 15\n",
-      "The algorithm took approximately 0.0 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "sequence = input('Third algorithm implementation. Please insert a string: ') \n",
-    "\n",
-    "start_time = time.time()\n",
-    "\n",
-    "table = [[1 for x in range(len(sequence))] for x in range(len(sequence))] \n",
-    "\n",
-    "for i in range(len(sequence)): \n",
-    "    table[i][i] = 1\n",
-    "\n",
-    "for substring_length in range(2, len(sequence) + 1): \n",
-    "    for i in range(len(sequence)-substring_length + 1): \n",
-    "        j = i + substring_length-1\n",
-    "        if sequence[i] == sequence[j] and substring_length == 2: \n",
-    "            table[i][j] = 2\n",
-    "        elif sequence[i] == sequence[j]: \n",
-    "            table[i][j] = table[i + 1][j-1] + 2\n",
-    "        else: \n",
-    "            table[i][j] = max(table[i][j-1], table[i + 1][j])\n",
-    "\n",
-    "print(\"The longest palindromic subsequence has length: \" + str(table[0][len(sequence)-1])) \n",
-    "\n",
-    "elapsed_time = time.time() - start_time\n",
-    "\n",
-    "print('The algorithm took approximately ' + str(round(elapsed_time, 2)) + ' seconds.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This time the running time experience a substantial improvement and even with very long strings the result it's computed quickly and efficiently."
-   ]
   }
  ],
  "metadata": {
@@ -1444,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "varInspector": {
    "cols": {
